fixed all page sizes to normal

--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -48,7 +48,7 @@
 
 <!-- HERO -->
 <section class="somehero">
-    <h2>Your Cart</h2>
+    <div align="center" style="color: white"><h2>Your Cart</h2></div>
     <p>Review your selected licenses and proceed to checkout.</p>
 </section>
 
