--- a/project/homepage/paynow2.html
+++ b/project/homepage/paynow2.html
@@ -42,7 +42,7 @@
   </div>
 <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-  <div class="container2 mt-5">
+  <div class="container2">
     <h2>Choose a Credit Card</h2>
   
   <div id="no-card-message" class="mt-3 text-danger fw-bold"></div>
