--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -128,7 +128,7 @@
         </div>
     </div>
 </div>
-<div class="gacontainer2">
+<div class="container2">
 <section class="middle-columns">
 
     <div class="mid-col">
