--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -42,10 +42,10 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 </head>
-<body class="bg-light">
+<body>
 
     <div class="bigwrapper" style="background-color: black; width:100%;">
-    <div class="container2 py-4" style="margin-top: 40px; margin-bottom: 40px;">
+    <div class="container2">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Reviews</h2>
