--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -44,7 +45,7 @@
 
     
 
-<div class="container2 py-4">
+<div class="container2">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>License Types</h2>
@@ -118,7 +119,6 @@
         </div>
     </div>
 </div>
-<div class="container2">
 <section class="middle-columns">
 
     <div class="mid-col">
@@ -251,5 +251,6 @@ async function updateLicenseType() {
 loadLicenseTypes();
 </script>
 <div class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
+</div>
 </body>
 </html>
