container widths normalized

--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -17,7 +17,7 @@
 </head>
 
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-
+<div class="container2">
 <!-- TOP NAV -->
 <div class="topnav">
     <div class="dropdown">
@@ -51,12 +51,12 @@
 </header>
 
 <!-- MAIN CONTENT -->
-<div class="container2 py-5">
+
 
     <h3 class="mb-4">Available Products</h3>
 
-    <div id="licenses-container2" class="row g-4"></div>
-</div>
+    <div id="licenses-container" class="row g-4"></div>
+
 
 <!-- FOOTER COLUMNS -->
 <section class="welcome-columns">
@@ -169,7 +169,7 @@ $(document).ready(function () {
     });
 });
 </script>
-
+</div>
 </body>
 </html>
 
