--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -12,7 +12,7 @@
 </style>
 </head>
 <body>
-<div class="container2">
+
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -40,7 +40,7 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
-
+<div class="container2"></div>
 <header>
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
