--- a/project/homepage/Help.html
+++ b/project/homepage/Help.html
@@ -32,8 +32,12 @@
     </div>
 
     <div class="right-links">
+        <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
+ 
     </div>
 </div>
 
