--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -39,8 +39,11 @@
 
     <div class="right-links">
         <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
+ 
     </div>
 </div>
 
