--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -35,8 +35,12 @@
     </div>
 
     <div class="right-links">
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+      <a href="index.html">Home</a>
+      <a href="userhelp.html">UserHelp</a>
+      <a href="usernotices.html">UserNotices</a>
+      <a href="login.html">Login</a>
+      <a href="logout.html">Logout</a>
+
     </div>
 </div>
 
