--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -33,10 +33,12 @@
     </div>
 
     <div class="right-links">
-        <a href="userhelp.html">Help</a>
-        <a href="usernotices.html">Alerts</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+      <a href="index.html">Home</a>
+      <a href="userhelp.html">UserHelp</a>
+      <a href="usernotices.html">UserNotices</a>
+      <a href="login.html">Login</a>
+      <a href="logout.html">Logout</a>
+
     </div>
 </div>
 
