--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -33,12 +33,14 @@
         </div>
     </div>
 
-    <div class="right-links">
-        <a href="userhelp.html">Help</a>
-        <a href="usernotices.html">Alerts</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
-    </div>
+        <div class="right-links">
+            <a href="index.html">Home</a>
+            <a href="userhelp.html">UserHelp</a>
+            <a href="usernotices.html">UserNotices</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+        </div>
+
 </div>
 
 <header>
