--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -36,12 +36,14 @@
         </div>
     </div>
 
-    <div class="right-links">
-        <a href="index.html">Home</a>
-        <a href="userhelp.html">UserHelp</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
-    </div>
+        <div class="right-links">
+            <a href="index.html">Home</a>
+            <a href="userhelp.html">UserHelp</a>
+            <a href="usernotices.html">UserNotices</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+        </div>
+
 </div>
 
 <!-- HEADER -->
