fixed container errors

--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -14,8 +14,8 @@
 </style>
 </head>
 
-<body onload="checkpll(); checkUserStatus(); displayProfilePicture();" style="background-color:black;">
-
+<body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
+<div class="container2">
 <!-- NAV -->
 <div class="topnav">
     <div class="dropdown">
@@ -227,6 +227,6 @@
     });
   });
 </script>
-   
+</div>
 </body>
 </html>
