--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
 <link rel="stylesheet" href="./css/greenville.css">  
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 </style>
 </head>
 <body>
-<div class="container2"></div>
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
