--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -5,15 +5,15 @@
     <title>Greenville Associates | Template</title>
     <!-- Material Web Components -->
     <!-- Corporate Styles -->
-    <link rel="stylesheet" href="./css/sites.css"></head> 
-    <link rel="stylesheet" href="./css/layout.css"></head> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
+    <link rel="stylesheet" href="./css/sites.css"></head> 
+    <link rel="stylesheet" href="./css/layout.css"></head> 
     <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
 <!-- Material Icons -->
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn" style="background-color: black;">Menu ▼</button>
