--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -32,14 +32,37 @@
             <a href="Help.html">Help</a>
         </div>
     </div>
+<div class="right-links" style="display:flex; gap:6px; align-items:center;">
 
-    <div class="right-links">
+    <md-text-button href="index.html">
+        <span class="material-icons">home</span>
+     </md-text-button>
+
+    <md-text-button href="userhelp.html">
+        <span class="material-icons">help_outline</span>
+    </md-text-button>
+
+    <md-text-button href="usernotices.html">
+        <span class="material-icons">notifications</span>
+    </md-text-button>
+
+    <md-text-button href="login.html">
+        <span class="material-icons">login</span>
+    </md-text-button>
+
+    <md-text-button href="logout.html">
+        <span class="material-icons">logout</span>
+    </md-text-button>
+
+</div>
+    
+    <!--<div class="right-links">
         <a href="index.html">Home</a>
         <a href="userhelp.html">UserHelp</a>
         <a href="usernotices.html">UserNotices</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
-    </div>
+    </div>-->
 </div>
 <header>
     <h1>Greenville Enterprise Software</h1>
@@ -435,6 +458,7 @@
 </div>
 </body>
 </html>
+
 
 
 
