--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -32,7 +32,7 @@
             <a href="Help.html">Help</a>
         </div>
     </div>
-<div class="right-links" style="display:flex; gap:6px; align-items:center;">
+<div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
     <md-text-button href="index.html">
         <span class="material-icons">home</span>
@@ -458,6 +458,7 @@
 </div>
 </body>
 </html>
+
 
 
 
