--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -35,23 +35,23 @@
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
     <md-text-button href="index.html">
-        <span class="material-icons">home</span>
+        <span class="material-icons"style="color:white;">home</span>
      </md-text-button>
 
     <md-text-button href="userhelp.html">
-        <span class="material-icons">help_outline</span>
+        <span class="material-icons" style="color:white;">help_outline</span>
     </md-text-button>
 
     <md-text-button href="usernotices.html">
-        <span class="material-icons">notifications</span>
+        <span class="material-icons" style="color:white;" >notifications</span>
     </md-text-button>
 
     <md-text-button href="login.html">
-        <span class="material-icons">login</span>
+        <span class="material-icons" style="color:white;">login</span>
     </md-text-button>
 
     <md-text-button href="logout.html">
-        <span class="material-icons">logout</span>
+        <span class="material-icons" style="color:white;">logout</span>
     </md-text-button>
 
 </div>
@@ -458,6 +458,7 @@
 </div>
 </body>
 </html>
+
 
 
 
