--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script type="module" src="https://esm.run/@material/web/all.js"></script>
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
