--- a/project/homepage/reviewpayment5.html
+++ b/project/homepage/reviewpayment5.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/site.css">
   <link rel="stylesheet" href="./css/layout.css">
   <link rel="stylesheet" href="./css/greenville.css">
