--- a/project/homepage/sitemap.html
+++ b/project/homepage/sitemap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Greenville Associates | Template</title>
     <!-- Material Web Components -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <!-- Corporate Styles -->
     <link rel="stylesheet" href="./css/site.css">
