Added Interior Routing

--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -63,7 +63,44 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
- 
+<nav>
+    <ul class="menu">
+        <li><a href="#products">Products</a></li>
+
+        <li class="dropdown">
+            <a href="#deployment">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#onprem">On‑Premise</a></li>
+                <li><a href="#cloud">Cloud</a></li>
+                <li><a href="#hybrid">Hybrid</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="#licensing">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#utility">Utility Hours</a></li>
+                <li><a href="#namedusers">Named Users</a></li>
+                <li><a href="#buel">Business Unit Enterprise</a></li>
+                <li><a href="#enterprise">Enterprise License Types</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="#pricing">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="#pricing-enterprise">Enterprise</a></li>
+                <li><a href="#pricing-cloud">Cloud</a></li>
+                <li><a href="#pricing-onprem">On‑Premise</a></li>
+                <li><a href="#pricing-utility">Utility Model</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#contact">Contact Sales</a></li>
+    </ul>
+</nav>
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>License Types</h2>
