--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -64,9 +64,45 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
+<nav>
+  <ul class="menu">
+      <li><a href="#products">Products</a></li>
 
+      <li class="dropdown">
+          <a href="#deployment">Deployment ▾</a>
+          <ul class="dropdown-content">
+              <li><a href="#onprem">On‑Premise</a></li>
+              <li><a href="#cloud">Cloud</a></li>
+              <li><a href="#hybrid">Hybrid</a></li>
+          </ul>
+      </li>
 
-<div class="container2">
+      <li class="dropdown">
+          <a href="#licensing">Licensing ▾</a>
+          <ul class="dropdown-content">
+              <li><a href="#utility">Utility Hours</a></li>
+              <li><a href="#namedusers">Named Users</a></li>
+              <li><a href="#buel">Business Unit Enterprise</a></li>
+              <li><a href="#enterprise">Enterprise License Types</a></li>
+          </ul>
+      </li>
+
+      <!-- ⭐ NEW PRICING MENU -->
+      <li class="dropdown">
+          <a href="#pricing">Pricing ▾</a>
+          <ul class="dropdown-content">
+              <li><a href="#pricing">All Licenses</a></li>
+              <li><a href="#pricing-enterprise">Enterprise</a></li>
+              <li><a href="#pricing-cloud">Cloud</a></li>
+              <li><a href="#pricing-onprem">On‑Premise</a></li>
+              <li><a href="#pricing-utility">Utility Model</a></li>
+          </ul>
+      </li>
+
+      <li><a href="#contact">Contact Sales</a></li>
+  </ul>
+</nav>
+
 
   <h2 class="mb-4 text-center">License Manager</h2>
 
@@ -266,7 +302,6 @@ document.querySelector("#updateForm").addEventListener("submit", async e => {
 loadLicenses();
 </script>
 
-<div class="container2">
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
