--- a/project/homepage/sitemap.html
+++ b/project/homepage/sitemap.html
@@ -68,34 +68,46 @@
     <h1>Greenville Enterprise Software - Sitemap</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
-
-<!-- ========================= -->
-<!-- INTERIOR PAGE NAVIGATION  -->
-<!-- ========================= -->
 <nav>
-    <ul class="menu" style="margin: 0 auto; max-width: 1600px;">
-        <li><a href="index.html">Home</a></li>
+    <ul class="menu">
+        <li><a href="#products">Products</a></li>
+
         <li class="dropdown">
-            <a href="#">Products ▾</a>
+            <a href="#deployment">Deployment ▾</a>
             <ul class="dropdown-content">
-                <li><a href="products.html">All Products</a></li>
-                <li><a href="licenses.html">Licenses</a></li>
+                <li><a href="#onprem">On‑Premise</a></li>
+                <li><a href="#cloud">Cloud</a></li>
+                <li><a href="#hybrid">Hybrid</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
-            <a href="#">Account ▾</a>
+            <a href="#licensing">Licensing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="login.html">Login</a></li>
-                <li><a href="logout.html">Logout</a></li>
-                <li><a href="mylicenses.html">My Licenses</a></li>
-                <li><a href="mycart.html?uid=1">My Cart</a></li>
+                <li><a href="#utility">Utility Hours</a></li>
+                <li><a href="#namedusers">Named Users</a></li>
+                <li><a href="#buel">Business Unit Enterprise</a></li>
+                <li><a href="#enterprise">Enterprise License Types</a></li>
             </ul>
         </li>
 
-        <li><a href="contact.html">Contact Sales</a></li>
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="#pricing">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="#pricing-enterprise">Enterprise</a></li>
+                <li><a href="#pricing-cloud">Cloud</a></li>
+                <li><a href="#pricing-onprem">On‑Premise</a></li>
+                <li><a href="#pricing-utility">Utility Model</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
+
+
 
 
 
