--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -109,13 +109,13 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-   
+<section class="top-section">   
 <!-- HERO SECTION -->
 <section class="hero" style="background-color: white;">
     <h2>Welcome to Greenville Associates Enterprise Licensing</h2>
     <span>Your central hub for software licensing, product access, and enterprise resources.</span>
 </section>
-
+</section>
 <!-- THREE COLUMN SECTION -->
 <section class="welcome-columns">
 
