--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -101,7 +101,7 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-
+<section class="top-section">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h4>License Types</h4>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
@@ -173,6 +173,7 @@
         </div>
     </div>
 </div>
+</section>
 <section class="middle-columns">
 
     <div class="mid-col">
