--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -107,7 +107,7 @@
 
 <body>
 
-<div class="container2">
+<section class="top-section">
     <h2 class="text-center mb-4">User Notices</h2>
 
     <table class="table table-bordered table-striped" id="noticesTable">
@@ -126,8 +126,8 @@
             <!-- Rows will be inserted here -->
         </tbody>
     </table>
-</div>
-<div class="container2">
+</section>
+
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -168,7 +168,6 @@
     <h2>Talk to Sales</h2>
     <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
     <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
-</div>
 </section>
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
