--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -104,6 +104,8 @@
     </ul>
 </nav>
 
+<!-- MAIN DATA GRID -->    
+<section class="top-section">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h4>Product Administrator</h4>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
@@ -183,6 +185,7 @@
         </div>
     </div>
 </div>
+</section>
 <section class="middle-columns">
 
     <div class="mid-col">
