--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -228,8 +228,10 @@
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-
-<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
+<!-- FOOTER -->
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
 </div>   
 <!-- Bootstrap + JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
