--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -217,7 +217,10 @@
     </div>
 </section>
 <BR>
-
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
@@ -305,7 +308,5 @@ async function updateLicenseType() {
 
 loadLicenseTypes();
 </script>
-<div class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
-</div>
 </body>
 </html>
