--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -103,7 +103,7 @@
             <li><a href="#contact">Contact Sales</a></li>
         </ul>
     </nav>
-
+<section class="top-section">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Reviews</h2>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
@@ -234,7 +234,7 @@
         </div>
     </div>
 </div>
-
+</section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
@@ -330,7 +330,6 @@ async function updateReview() {
 loadReviews();
 </script>
 
-<div class="container2">
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -373,7 +372,6 @@ loadReviews();
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-</div>
 <!-- FOOTER -->
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
