--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
+<script src="./js/mylicenses.js"></script>    
 <title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
