--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -15,8 +15,100 @@
 
 <body>
 <div class="container2">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="testimonials.html">Testimonials</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+<div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
-<!-- NAV + HEADER OMITTED FOR BREVITY (unchanged) -->
+    <md-text-button href="index.html">
+        <span class="material-icons"style="color:white;">home</span>
+     </md-text-button>
+
+    <md-text-button href="userhelp.html">
+        <span class="material-icons" style="color:white;">help_outline</span>
+    </md-text-button>
+
+    <md-text-button href="usernotices.html">
+        <span class="material-icons" style="color:white;" >notifications</span>
+    </md-text-button>
+
+    <md-text-button href="login.html">
+        <span class="material-icons" style="color:white;">login</span>
+    </md-text-button>
+
+    <md-text-button href="logout.html">
+        <span class="material-icons" style="color:white;">logout</span>
+    </md-text-button>
+
+</div>
+    
+    <!--<div class="right-links">
+        <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>-->
+</div>
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
+
+<nav>
+    <ul class="menu">
+        <li><a href="#products">Products</a></li>
+
+        <li class="dropdown">
+            <a href="#deployment">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#onprem">On‑Premise</a></li>
+                <li><a href="#cloud">Cloud</a></li>
+                <li><a href="#hybrid">Hybrid</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="#licensing">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#utility">Utility Hours</a></li>
+                <li><a href="#namedusers">Named Users</a></li>
+                <li><a href="#buel">Business Unit Enterprise</a></li>
+                <li><a href="#enterprise">Enterprise License Types</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="#pricing">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="#pricing-enterprise">Enterprise</a></li>
+                <li><a href="#pricing-cloud">Cloud</a></li>
+                <li><a href="#pricing-onprem">On‑Premise</a></li>
+                <li><a href="#pricing-utility">Utility Model</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#contact">Contact Sales</a></li>
+    </ul>
+</nav>
+
 
 <header>
     <h1>Greenville Enterprise Software</h1>
