--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -348,7 +348,8 @@ document.addEventListener("click", function(e) {
     }
 });
 </script>
-<footer class="footer" style="text-align: center;">
+<!-- FOOTER -->
+<footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 
