--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -106,8 +106,13 @@
 
 <!-- MAIN DATA GRID -->    
 <section class="top-section">
+
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Product Administrator</h4></span>
+        <hr>
+    </div>
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h4>Product Administrator</h4>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Product
         </button>
