--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -118,6 +118,12 @@
 <!-- ===================== LICENSE TABLE ===================== -->
 <section class="top-section">
 
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>My Licenses</h4></span>
+        <hr>
+    </div>
+    
 <div class="card mb-4">
     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
         <span>All Licenses</span>
