--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -111,9 +111,13 @@
   </ul>
 </nav>
 
-<div class="container2" style="margin-top: 40px";>
-  <h4 class="mb-4">License Logs</h4>
-
+<section class="top-section">
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>License Logs</h4></span>
+        <hr>
+    </div>
+    
   <table class="table table-striped table-bordered" id="logsTable">
     <thead class="table-dark">
       <tr>
@@ -128,7 +132,7 @@
       <!-- Rows will be inserted here -->
     </tbody>
   </table>
-</div>
+</section>
 
 <script>
   let logs = [];
