--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -103,9 +103,14 @@
             <li><a href="#contact">Contact Sales</a></li>
         </ul>
     </nav>
+
+        <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Reviews</h4></span>
+        <hr>
+    </div>
 <section class="top-section">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Reviews</h2>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Review
         </button>
