--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -114,8 +114,15 @@
       <li><a href="#contact">Contact Sales</a></li>
   </ul>
 </nav>
-  
-     <h1 class="mb-4 text-center">Testimonials</h1>
+
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Testimonials</h4></span>
+        <hr>
+    </div>
+
+ 
+  <section class="top-section">
 
     <table class="table table-striped-green table-bordered text-center align-middle">
       <thead>
@@ -132,7 +139,7 @@
       </tbody>
     </table>
   </div>
-
+</section>
   <script>
     async function loadTestimonials() {
       try {
