--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -67,6 +67,13 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
+    
+<div class="pageheader">
+        <hr>
+        <span align="center"><h4>My Cart</h4></span>
+        <hr>
+    </div>
+<section class="top-section">
 <!-- HERO -->
 <section class="somehero">
     <div align="center" style="color: white"><h2>Your Cart</h2></div>
@@ -81,7 +88,7 @@
         <button id="checkout-btn" class="btn btn-primary btn-lg w-100">Checkout</button>
     </div>
 </div>
-
+</section>
 <!-- FOOTER 3-COLUMN SECTION -->
 <section class="welcome-columns">
 
