--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -101,10 +101,15 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>License Types</h4></span>
+        <hr>
+    </div>
+    
 <section class="top-section">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h4>License Types</h4>
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add License Type
         </button>
     </div>
