--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -63,20 +63,56 @@
     </div>
 </div>
 
-<!-- HEADER -->
 <header>
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
+<nav>
+    <ul class="menu">
+        <li><a href="#products">Products</a></li>
+
+        <li class="dropdown">
+            <a href="#deployment">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#onprem">On‑Premise</a></li>
+                <li><a href="#cloud">Cloud</a></li>
+                <li><a href="#hybrid">Hybrid</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="#licensing">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#utility">Utility Hours</a></li>
+                <li><a href="#namedusers">Named Users</a></li>
+                <li><a href="#buel">Business Unit Enterprise</a></li>
+                <li><a href="#enterprise">Enterprise License Types</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="#pricing">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="#pricing-enterprise">Enterprise</a></li>
+                <li><a href="#pricing-cloud">Cloud</a></li>
+                <li><a href="#pricing-onprem">On‑Premise</a></li>
+                <li><a href="#pricing-utility">Utility Model</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#contact">Contact Sales</a></li>
+    </ul>
+</nav>
+
 <!-- MAIN CONTENT -->
-
-
-    <h3 class="mb-4">Available Products</h3>
-
+<h4>Available Products</h4>
+    
+<section class="top-section">
     <div id="licenses-container" class="row g-4"></div>
-
-
+</section>
 <!-- FOOTER COLUMNS -->
 <section class="welcome-columns">
 
