--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -106,10 +106,12 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-
-<!-- MAIN CONTENT -->
-<h4>Available Products</h4>
-    
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Shop Available Products</h4></span>
+        <hr>
+    </div>
+        
 <section class="top-section">
     <div id="licenses-container" class="row g-4"></div>
 </section>
