--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -112,7 +112,7 @@
 <section class="top-section">   
 <!-- HERO SECTION -->
 <section class="hero" style="background-color: white;">
-    <h2>Welcome to Greenville Associates Enterprise Licensing</h2>
+    <h2 style="text-align: center;">Welcome to Greenville Associates Enterprise Licensing</h2>
     <span>Your central hub for software licensing, product access, and enterprise resources.</span>
 </section>
 </section>
